--- a/public/css/style.css
+++ b/public/css/style.css
@@ -220,7 +220,7 @@ h3 {
   font-size: 9px;
 }
 
-.header-area .main-header-area .main-menu ul li a::before {
+/*.header-area .main-header-area .main-menu ul li a::before {
   position: absolute;
   content: "";
   background: #fff;
@@ -234,7 +234,7 @@ h3 {
   -moz-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
-}
+}*/
 
 .header-area .main-header-area .main-menu ul li .submenu {
   position: absolute;
@@ -483,4 +483,13 @@ h5,
 h6 {
   line-height: 1.2em;
   padding: 20px 0 20px 0;
+}
+
+.erro{
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  color: black;
+  margin: 10px 50px 10px 50px;
 }
