--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,7 @@ a,
 button {
   color: #1F1F1F;
   outline: medium none;
+  font-size: 17px;
 }
 
 h1, h2, h3, h4, h5 {
@@ -335,7 +336,7 @@ h3 {
   line-height: 28px;
 }
 
-.gj-datepicker input {
+/*.gj-datepicker input {
   width: 100%;
   height: 50px;
   border: 1px solid #ddd;
@@ -365,7 +366,7 @@ h3 {
   padding: 10px;
   padding: 20px;
   border: 1px solid #E0E0E0;
-}
+}*/
 
 .footer {
   background-repeat: no-repeat;
